Fixed overflow-x error

--- a/src/stylesheet/projects/projects.scss
+++ b/src/stylesheet/projects/projects.scss
@@ -143,7 +143,6 @@ img {
 }
 
 section {
-    width: 100vw;
     height: 100vh;
 }
 
